--- a/app/src/main/res/layout/registrar_activity.xml
+++ b/app/src/main/res/layout/registrar_activity.xml
@@ -1,10 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/scrollView2"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbarRegistrar"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:backgroundTint="#26A69A"
+        android:background="#26A69A"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        app:title="@string/registro_titulo"
+        app:titleTextColor="#050505" />
+
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -286,10 +306,11 @@
             android:id="@+id/textViewValorCredito"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="000"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@+id/radioGroup2"
-            tools:layout_editor_absoluteY="480dp" />
+            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />
 
         <TextView
             android:id="@+id/textViewAliasCBU"
@@ -309,19 +330,8 @@
             app:layout_constraintBaseline_toBaselineOf="@+id/editTextCBU"
             app:layout_constraintStart_toStartOf="@+id/textViewAliasCBU" />
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbarRegistrar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorTituloText"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:title="@string/registro_titulo"
-            app:titleTextColor="#050505" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+    </ScrollView>
+</RelativeLayout>
