--- a/app/src/main/res/layout/registrar_activity.xml
+++ b/app/src/main/res/layout/registrar_activity.xml
@@ -31,7 +31,7 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/buttonRegistrar"
             style="@style/Widget.AppCompat.Button"
             android:layout_width="132dp"
             android:layout_height="43dp"
@@ -46,10 +46,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/CheckBoxTerminosYCondiciones" />
+            app:layout_constraintTop_toBottomOf="@+id/checkBoxTerminosYCondiciones" />
 
         <CheckBox
-            android:id="@+id/CheckBoxTerminosYCondiciones"
+            android:id="@+id/checkBoxTerminosYCondiciones"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
