--- a/app/src/main/res/layout/registrar_activity.xml
+++ b/app/src/main/res/layout/registrar_activity.xml
@@ -4,17 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="?attr/colorAccent"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        android:title="@string/registro_titulo"
-        android:titleMargin="10dp"
-        android:titleTextColor="#050505"></Toolbar>
-
+    android:layout_height="match_parent"
+    android:visibility="visible">
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -107,6 +98,7 @@
                 android:ems="9"
                 android:hint="@string/registro_numeroTarjeta"
                 android:inputType="number"
+                android:maxLength="16"
                 android:textSize="16sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/editTextCodigoTarjeta"
                 app:layout_constraintStart_toStartOf="@+id/textViewTarjetaDeCredito" />
@@ -211,6 +203,7 @@
                 android:scrollbarSize="8sp"
                 app:layout_constraintBottom_toBottomOf="@+id/textViewCreditoInicial"
                 app:layout_constraintEnd_toStartOf="@+id/textViewValorCredito"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/textViewCreditoInicial"
                 app:layout_constraintTop_toTopOf="@+id/textViewCreditoInicial" />
 
@@ -345,4 +338,14 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
+
+    <Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:background="?attr/colorAccent"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:title="@string/registro_titulo"
+        android:titleMargin="10dp"
+        android:titleTextColor="#050505"></Toolbar>
 </RelativeLayout>
