--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -5,6 +5,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/navigation_home"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="@string/itemHome" />
+        <item
             android:id="@+id/navigation_registrarme"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/itemRegistrarme" />
