Lista los platos creados pero sin imagen

--- a/app/src/main/res/layout/fragment_listar_item.xml
+++ b/app/src/main/res/layout/fragment_listar_item.xml
@@ -14,7 +14,11 @@
         android:layout_height="match_parent"
         tools:context="cobelli_moix_tomas.isi.frsf.utn.sendmeal.NewItem">
 
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/dishRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/plato_card" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
