--- a/app/src/main/res/layout/fragment_listar_item.xml
+++ b/app/src/main/res/layout/fragment_listar_item.xml
@@ -7,18 +7,16 @@
     android:layout_height="match_parent"
     android:background="#F3F1F1">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:context="cobelli_moix_tomas.isi.frsf.utn.sendmeal.NewItem">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/dishRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             tools:listitem="@layout/plato_card" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </ScrollView>
