--- a/app/src/main/res/layout/plato_card.xml
+++ b/app/src/main/res/layout/plato_card.xml
@@ -7,29 +7,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/textViewNombre"
-            android:layout_width="128dp"
-            android:layout_height="22dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="Nombre"
-            app:layout_constraintEnd_toStartOf="@+id/textViewPrecio"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView5" />
-
-        <TextView
-            android:id="@+id/textViewPrecio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Precio"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textViewNombre"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textViewNombre" />
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/imageViewPlato"
@@ -44,6 +22,28 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/hamburguesa" />
+
+        <TextView
+            android:id="@+id/textViewPrecio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Precio"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textViewNombre"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/textViewNombre" />
+
+        <TextView
+            android:id="@+id/textViewNombre"
+            android:layout_width="128dp"
+            android:layout_height="22dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Nombre"
+            app:layout_constraintEnd_toStartOf="@+id/textViewPrecio"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageViewPlato" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
