--- a/app/src/main/res/layout/plato_card.xml
+++ b/app/src/main/res/layout/plato_card.xml
@@ -10,15 +10,6 @@
     app:cardCornerRadius="10dp"
     app:cardElevation="5dp">
 
-    <!--
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardBackgroundColor="@android:color/white"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="0dp">
--->
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -65,7 +56,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textViewNombre" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/buttonOpcionesPlato"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginTop="8dp"
@@ -78,7 +69,5 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <!--</androidx.cardview.widget.CardView>-->
 
 </androidx.cardview.widget.CardView>
