--- a/app/src/main/res/layout/plato_card.xml
+++ b/app/src/main/res/layout/plato_card.xml
@@ -93,6 +93,17 @@
                 app:srcCompat="@drawable/hamburguesa" />
         </androidx.cardview.widget.CardView>
 
+        <TextView
+            android:id="@+id/ofertado"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:text="Plato ofertado"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewPrecio" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
